--- a/src/components/main_page/BenefitsSection/BenefitsSection.module.css
+++ b/src/components/main_page/BenefitsSection/BenefitsSection.module.css
@@ -16,7 +16,6 @@
 
 .rightColumn {
     width: 42%;
-    margin-left: 20px;
 
 }
 
@@ -27,6 +26,7 @@
     padding: 64px 0 64px 64px;
     background-color: white;
     border-radius: 16px;
+
 }
 
 .sectionTitle {
@@ -72,7 +72,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 56px 0 0 64px;
+    padding: 64px 0 0 64px;
     background-color: #fde68a;
     border-radius: 16px;
 
@@ -113,12 +113,13 @@
 }
 
 .largePriceText {
-    margin-left: 20px;
+    /*margin-left: 20px;*/
     font-size: 216px;
     font-weight: bold;
     line-height: 1;
     color: #f4f4f5;
     text-align: right;
+
 
 }
 
