--- a/src/components/main_page/CandidateCard/CandidateCard.module.css
+++ b/src/components/main_page/CandidateCard/CandidateCard.module.css
@@ -3,11 +3,12 @@
     flex-direction: column;
     align-items: center;
     padding: 28px 40px;
-    width: 1504px;
-    margin: 0 auto;
+    width: 300px;
+    margin: 0 10px;
     background-color: white;
     border-radius: 12px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+    flex-shrink: 0;
 }
 
 .card-content {
