--- a/src/components/main_page/BenefitsSection/BenefitsSection.module.css
+++ b/src/components/main_page/BenefitsSection/BenefitsSection.module.css
@@ -32,7 +32,7 @@
 .sectionTitle {
     font-size: 46px;
     line-height: 40px;
-    color: #111827;
+    color: #000000;
     font-weight: 80;
     padding-right: 80px;
 }
@@ -110,6 +110,8 @@
     border: 1px solid #fde68a;
     border-radius: 24px;
     overflow: hidden;
+    text-decoration: none;
+    color: #000000;
 }
 
 .largePriceText {
